--- a/trunk/shaman/ui/configDialog.ui
+++ b/trunk/shaman/ui/configDialog.ui
@@ -230,9 +230,9 @@
               <property name="html" >
                <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
-&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans';">Shaman Manteinance.&lt;/p>
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Liberation Sans';">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Liberation Sans'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Shaman Manteinance.&lt;/p>
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Please choose an action from the Drop-Down Menu.&lt;/p>&lt;/body>&lt;/html></string>
               </property>
              </widget>
             </item>
@@ -964,28 +964,28 @@ and Pacman.</string>
          </property>
          <layout class="QGridLayout" >
           <item row="0" column="0" >
-           <widget class="QCheckBox" name="checkBox_16" >
+           <widget class="QCheckBox" name="updateRSSBox" >
             <property name="text" >
              <string>Update RSS Feed Every</string>
             </property>
            </widget>
           </item>
           <item row="0" column="1" >
-           <widget class="QSpinBox" name="spinBox_6" >
+           <widget class="QSpinBox" name="updateRSSSpin" >
             <property name="suffix" >
              <string comment="As in &quot;minutes&quot;" >min</string>
             </property>
            </widget>
           </item>
           <item row="1" column="0" >
-           <widget class="QCheckBox" name="checkBox_17" >
+           <widget class="QCheckBox" name="notifyRSSBox" >
             <property name="text" >
              <string>Notify upon new items</string>
             </property>
            </widget>
           </item>
           <item row="2" column="0" colspan="3" >
-           <widget class="QCheckBox" name="checkBox_18" >
+           <widget class="QCheckBox" name="notifyQueueRSSBox" >
             <property name="text" >
              <string>Check if there is an unread news about a package in Queue before processing it</string>
             </property>
