--- a/trunk/shaman/ui/pkgProperties.ui
+++ b/trunk/shaman/ui/pkgProperties.ui
@@ -8,8 +8,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>588</width>
-    <height>554</height>
+    <width>561</width>
+    <height>405</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -47,7 +47,7 @@
 &lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
 &lt;/style>&lt;/head>&lt;body style=" font-family:'Bitstream Vera Sans'; font-size:10pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-weight:600;">Package Properties&lt;/span>&lt;/p>&lt;/body>&lt;/html></string>
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-weight:600;">Package Information&lt;/span>&lt;/p>&lt;/body>&lt;/html></string>
           </property>
          </widget>
         </item>
@@ -92,184 +92,170 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>566</width>
-          <height>418</height>
+          <width>539</width>
+          <height>269</height>
          </rect>
         </property>
         <attribute name="title" >
          <string>Package Information</string>
         </attribute>
-        <layout class="QVBoxLayout" name="verticalLayout_3" >
-         <item>
-          <layout class="QGridLayout" name="gridLayout" >
-           <item row="0" column="0" >
-            <widget class="QLabel" name="label_3" >
-             <property name="text" >
-              <string>Installed</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1" >
-            <widget class="QLabel" name="installedLabel" >
-             <property name="text" >
-              <string/>
-             </property>
-             <property name="pixmap" >
-              <pixmap resource="shaman.qrc" >:/Icons/icons/dialog-ok-apply.png</pixmap>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0" >
-            <widget class="QLabel" name="label_4" >
-             <property name="text" >
-              <string>Upgradeable</string>
-             </property>
-             <property name="scaledContents" >
-              <bool>true</bool>
-             </property>
-             <property name="wordWrap" >
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1" >
-            <widget class="QLabel" name="upgradeableLabel" >
-             <property name="text" >
-              <string/>
-             </property>
-             <property name="pixmap" >
-              <pixmap resource="shaman.qrc" >:/Icons/icons/dialog-ok-apply.png</pixmap>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0" >
-            <widget class="QLabel" name="label_7" >
-             <property name="text" >
-              <string>Description</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1" >
-            <widget class="QLabel" name="descriptionLabel" >
-             <property name="text" >
-              <string/>
-             </property>
-             <property name="scaledContents" >
-              <bool>true</bool>
-             </property>
-             <property name="wordWrap" >
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="0" >
-            <widget class="QLabel" name="label_17" >
-             <property name="text" >
-              <string>Version</string>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="1" >
-            <widget class="QLabel" name="versionLabel" >
-             <property name="text" >
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="4" column="0" >
-            <widget class="QLabel" name="label_8" >
-             <property name="text" >
-              <string>Build Date</string>
-             </property>
-            </widget>
-           </item>
-           <item row="4" column="1" >
-            <widget class="QLabel" name="buildLabel" >
-             <property name="text" >
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="0" >
-            <widget class="QLabel" name="label_11" >
-             <property name="text" >
-              <string>Install Date</string>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="1" >
-            <widget class="QLabel" name="dateLabel" >
-             <property name="text" >
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="0" >
-            <widget class="QLabel" name="label_12" >
-             <property name="text" >
-              <string>Packager</string>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="1" >
-            <widget class="QLabel" name="packagerLabel" >
-             <property name="text" >
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="7" column="0" >
-            <widget class="QLabel" name="label_13" >
-             <property name="text" >
-              <string>Provides</string>
-             </property>
-            </widget>
-           </item>
-           <item row="7" column="1" >
-            <widget class="QLabel" name="providesLabel" >
-             <property name="text" >
-              <string/>
-             </property>
-             <property name="scaledContents" >
-              <bool>true</bool>
-             </property>
-             <property name="wordWrap" >
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="8" column="0" >
-            <widget class="QLabel" name="label_19" >
-             <property name="text" >
-              <string>Size</string>
-             </property>
-            </widget>
-           </item>
-           <item row="8" column="1" >
-            <widget class="QLabel" name="sizeLabel" >
-             <property name="text" >
-              <string/>
-             </property>
-            </widget>
-           </item>
-           <item row="9" column="0" >
-            <widget class="QLabel" name="label_21" >
-             <property name="text" >
-              <string>Has a Scriptlet</string>
-             </property>
-            </widget>
-           </item>
-           <item row="9" column="1" >
-            <widget class="QLabel" name="scriptletLabel" >
-             <property name="text" >
-              <string/>
-             </property>
-             <property name="pixmap" >
-              <pixmap resource="shaman.qrc" >:/Icons/icons/dialog-ok-apply.png</pixmap>
-             </property>
-            </widget>
-           </item>
-          </layout>
+        <layout class="QGridLayout" name="gridLayout" >
+         <item row="0" column="0" >
+          <widget class="QLabel" name="label_3" >
+           <property name="text" >
+            <string>Installed:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="4" >
+          <widget class="QLabel" name="label_7" >
+           <property name="text" >
+            <string>Description:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0" >
+          <widget class="QLabel" name="label_4" >
+           <property name="text" >
+            <string>Upgradeable</string>
+           </property>
+           <property name="scaledContents" >
+            <bool>true</bool>
+           </property>
+           <property name="wordWrap" >
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item rowspan="3" row="1" column="4" >
+          <widget class="QLabel" name="descriptionLabel" >
+           <property name="text" >
+            <string/>
+           </property>
+           <property name="scaledContents" >
+            <bool>true</bool>
+           </property>
+           <property name="wordWrap" >
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="0" >
+          <widget class="QLabel" name="label_8" >
+           <property name="text" >
+            <string>Build Date:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1" colspan="2" >
+          <widget class="QLabel" name="builddateLabel" >
+           <property name="text" >
+            <string>TextLabel</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="4" >
+          <widget class="QLabel" name="label_13" >
+           <property name="text" >
+            <string>Provides:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0" >
+          <widget class="QLabel" name="label_11" >
+           <property name="text" >
+            <string>Install Date:</string>
+           </property>
+          </widget>
+         </item>
+         <item rowspan="4" row="5" column="4" >
+          <widget class="QListWidget" name="providesWidget" />
+         </item>
+         <item row="6" column="0" >
+          <widget class="QLabel" name="label_12" >
+           <property name="text" >
+            <string>Packager:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="7" column="0" >
+          <widget class="QLabel" name="label_19" >
+           <property name="text" >
+            <string>Size:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="8" column="0" >
+          <widget class="QLabel" name="label_21" >
+           <property name="text" >
+            <string>Has a Scriptlet</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="1" >
+          <widget class="QLabel" name="installdateLabel" >
+           <property name="text" >
+            <string>TextLabel</string>
+           </property>
+          </widget>
+         </item>
+         <item row="6" column="1" >
+          <widget class="QLabel" name="packagerLabel" >
+           <property name="text" >
+            <string>TextLabel</string>
+           </property>
+          </widget>
+         </item>
+         <item row="7" column="1" >
+          <widget class="QLabel" name="sizeLabel" >
+           <property name="text" >
+            <string>TextLabel</string>
+           </property>
+          </widget>
+         </item>
+         <item row="8" column="1" >
+          <widget class="QLabel" name="scriptletLabel" >
+           <property name="text" >
+            <string/>
+           </property>
+           <property name="pixmap" >
+            <pixmap resource="shaman.qrc" >:/Icons/icons/dialog-ok-apply.png</pixmap>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1" >
+          <widget class="QLabel" name="installedLabel" >
+           <property name="text" >
+            <string/>
+           </property>
+           <property name="pixmap" >
+            <pixmap resource="shaman.qrc" >:/Icons/icons/dialog-ok-apply.png</pixmap>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1" >
+          <widget class="QLabel" name="upgradeableLabel" >
+           <property name="text" >
+            <string/>
+           </property>
+           <property name="pixmap" >
+            <pixmap resource="shaman.qrc" >:/Icons/icons/dialog-ok-apply.png</pixmap>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1" >
+          <widget class="QLabel" name="versionLabel" >
+           <property name="text" >
+            <string>TextLabel</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0" >
+          <widget class="QLabel" name="label_17" >
+           <property name="text" >
+            <string>Version:</string>
+           </property>
+          </widget>
          </item>
         </layout>
        </widget>
@@ -278,8 +264,8 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>566</width>
-          <height>418</height>
+          <width>539</width>
+          <height>269</height>
          </rect>
         </property>
         <attribute name="title" >
@@ -306,8 +292,8 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>566</width>
-          <height>418</height>
+          <width>539</width>
+          <height>269</height>
          </rect>
         </property>
         <attribute name="title" >
@@ -330,37 +316,33 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>566</width>
-          <height>418</height>
+          <width>539</width>
+          <height>269</height>
          </rect>
         </property>
         <attribute name="title" >
-         <string>Dependancies</string>
+         <string>Dependencies</string>
         </attribute>
-        <layout class="QVBoxLayout" name="verticalLayout_6" >
-         <item>
-          <layout class="QVBoxLayout" name="verticalLayout_5" >
-           <item>
-            <widget class="QLabel" name="label_23" >
-             <property name="text" >
-              <string>Depends on</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QListWidget" name="dependsWidget" />
-           </item>
-           <item>
-            <widget class="QLabel" name="label_24" >
-             <property name="text" >
-              <string>Is Required by</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QListWidget" name="requiredWidget" />
-           </item>
-          </layout>
+        <layout class="QGridLayout" name="gridLayout_2" >
+         <item row="0" column="0" >
+          <widget class="QLabel" name="label_23" >
+           <property name="text" >
+            <string>Depends on</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1" >
+          <widget class="QLabel" name="label_24" >
+           <property name="text" >
+            <string>Is Required by</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0" >
+          <widget class="QListWidget" name="dependsWidget" />
+         </item>
+         <item row="1" column="1" >
+          <widget class="QListWidget" name="requiredWidget" />
          </item>
         </layout>
        </widget>
@@ -369,8 +351,8 @@ p, li { white-space: pre-wrap; }
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>566</width>
-          <height>418</height>
+          <width>539</width>
+          <height>269</height>
          </rect>
         </property>
         <attribute name="title" >
@@ -425,6 +407,7 @@ p, li { white-space: pre-wrap; }
     </layout>
    </item>
   </layout>
+  <zorder>okButton</zorder>
  </widget>
  <resources>
   <include location="shaman.qrc" />
